formatação no texto

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
         Fametro, e entusiasta da tecnologia.<br />
         Atualmente focado no desenvolvimento Front-End, com conhecimento em
         HTML, CSS, JS, Bootstrap e criação de layouts responsivos.<br />
-        Possuo
-        também familiaridade com o sistema de controle de versionamento Git
+        Possuo também familiaridade com o sistema de controle de versionamento Git
         e a plataforma GitHub.
       </p>
     </div>
