--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a target="_blank" href="mailto:ssqjr@hotmail.com"><i class="fa-solid fa-at"></i></a>
           </li>
           <li>
-            <a target="_blank" href="https://wa.me/92999999999"><i class="fa fa-whatsapp"></i>
+            <a target="_blank" href="https://wa.me/5592982264687"><i class="fa fa-whatsapp"></i>
             </a>
           </li>
         </ul>
@@ -45,10 +45,11 @@
     </div>
     <div onclick="displayAbout()" id="arrow">
       <i id="animation" class="fa-solid fa-circle-arrow-down"></i>
+      <p>Clique aqui</p>
     </div>
     <div style="display: none" id="sobre">
       <p>
-        Olá, eu sou Sebastião Júnior!<br />
+        Olá, eu sou Sebastião!<br />
         Graduado em Sistemas de Informação pelo Centro Universitário
         Fametro, e entusiasta da tecnologia.<br />
         Atualmente focado no desenvolvimento Front-End, com conhecimento em
@@ -65,7 +66,7 @@
         <p>Deixe seu contato</p>
       </div>
       <form action="">
-        <input type="text" placeholder="Seu melhor email..." />
+        <input type="text" placeholder="Seu email..." />
         <button>Enviar</button>
       </form>
     </div>
