--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="estilo.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Sebastião Júnior</title>
   </head>
 
@@ -16,7 +19,7 @@
     <header>
       <div class="logo">
         <i class="fa-solid fa-code fa-xl"></i>
-        <h2>JrCoder</h2>
+        <h2>SJ-Coder</h2>
         <i class="fa-solid fa-code fa-xl"></i>
       </div>
       <div>
@@ -39,7 +42,7 @@
 
     <section class="container">
       <div class="nome">
-        <h1>Sebastião Júnior</h1>
+        <h1>Sebastião Souza Queiroz Júnior</h1>
         <h5>Front-end Developer</h5>
       </div>
     </div>
